src/objects/AstrumCRMSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Astrum CRM Settings</description>
    <fields>
        <fullName>Annapolis_Junction_MD_Sales_Coord__c</fullName>
        <description>Annapolis Junction, MD Sales Coord</description>
        <inlineHelpText>Annapolis Junction, MD Sales Coord</inlineHelpText>
        <label>Annapolis Junction, MD Sales Coord</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bridgewater_NJ_Sales_Coord__c</fullName>
        <description>Bridgewater, NJ Sales Coord</description>
        <inlineHelpText>Bridgewater, NJ Sales Coord</inlineHelpText>
        <label>Bridgewater, NJ Sales Coord</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Henrietta_NY_Sales_Coord__c</fullName>
        <description>Henrietta, NY Sales Coord</description>
        <inlineHelpText>Henrietta, NY Sales Coord</inlineHelpText>
        <label>Henrietta, NY Sales Coord</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hopkinton_MA_Sales_Coord__c</fullName>
        <description>Hopkinton, MA Sales Coord</description>
        <inlineHelpText>Hopkinton, MA Sales Coord</inlineHelpText>
        <label>Hopkinton, MA Sales Coord</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Sales_Coord__c</fullName>
        <description>MA Office Sales Coordinator</description>
        <inlineHelpText>MA Office Sales Coordinator</inlineHelpText>
        <label>MA Sales Coord</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MI_Sales_Coord__c</fullName>
        <description>MI Sales Coord</description>
        <inlineHelpText>MI Sales Coord</inlineHelpText>
        <label>MI Sales Coord</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NY_Sales_Coord__c</fullName>
        <description>NY Sales Coord</description>
        <inlineHelpText>NY Sales Coord</inlineHelpText>
        <label>NY Sales Coord</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Norristown_PA_Sales_Coord__c</fullName>
        <description>Norristown, PA Sales Coord</description>
        <inlineHelpText>Norristown, PA Sales Coord</inlineHelpText>
        <label>Norristown, PA Sales Coord</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>White_Plains_NY_Sales_Coord__c</fullName>
        <description>White Plains, NY Sales Coord</description>
        <inlineHelpText>White Plains, NY Sales Coord</inlineHelpText>
        <label>White Plains, NY Sales Coord</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Youngstown_OH_Coord__c</fullName>
        <description>Youngstown, OH Coord</description>
        <inlineHelpText>Youngstown, OH Coord</inlineHelpText>
        <label>Youngstown, OH Coord</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>AstrumCRMSettings</label>
</CustomObject>